# BoVW

./: CMakeLists.txt  README.md  package.xml
lib/: CMakeLists.txt
lib/include/BoVW/: bow_img_desc.h  bow_trainer.h
lib/src/: bow_img_desc.cc  bow_trainer.cc  main.cc
