<package>
  <name>BoVW</name>
  <version>0.1.0</version>
  <description>This package implements a basic BoW model, including the computation of the IDF part, required for the TF--IDF scoring system.</description>

  <maintainer email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</maintainer>
  <author email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</author>

  <license>MIT</license>
  <url type="website">http://wiki.ros.org/BoVW</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <cpp lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lBoVW" cflags="-I${prefix}/lib/include/"/>
  </export>
</package>